objects/Event_Queue__c.object
<CustomObject>
    <description>This object will queue up all the actions we need do for Event.</description>
    <fields>
        <fullName>Event_Id__c</fullName>
        <description>Id for the Associated Event</description>
        <label>Event Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Action__c</fullName>
        <label>Exchange Action</label>
        <picklist>
            <picklistValues>
                <fullName>Upsert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_Email__c</fullName>
        <label>Exchange Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotomeeting_Action__c</fullName>
        <description>This indicates the action we need perform for the Gotomeeting.</description>
        <label>Gotomeeting Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gotomeeting_Hash__c</fullName>
        <description>This stores the Gotomeeting Hash.</description>
        <label>Gotomeeting Hash</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotomeeting_Id__c</fullName>
        <label>Gotomeeting Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotomeeting_Organizer__c</fullName>
        <label>Gotomeeting Organizer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotomeeting_Url__c</fullName>
        <label>Gotomeeting Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Action_Count__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Last Action Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Action_Result__c</fullName>
        <description>This stores the result of the last action.</description>
        <label>Last Action Result</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Processed__c</columns>
        <columns>NAME</columns>
        <columns>Event_Id__c</columns>
        <columns>Exchange_Action__c</columns>
        <columns>Exchange_Email__c</columns>
        <columns>Gotomeeting_Action__c</columns>
        <columns>Last_Action_Count__c</columns>
        <columns>Last_Action_Result__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EQ-{0}</displayFormat>
        <label>Event Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>